<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.hackathon.csusm.hackathon.Activities.MenuActivity">



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_section1"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/challenges_menu_button"
        android:onClick="showChallenges"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_section2"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/teams_menu_button"
        android:onClick="showTeams"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/challenges_menu_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_section4"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/judges_menu_button"
        android:onClick="showJudges"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/teams_menu_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/abc_action_bar_stacked_max_height" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_categories"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/scores_menu_button"
        android:onClick="showScoreCategories"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/judges_menu_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/log_out_button"
        android:onClick="showLogIn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffff2a31" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_teams_result"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/category_teams_result_button"
        android:background="@color/accent_material_light"
        android:layout_alignParentLeft="true"
        android:onClick="showCategoryTeamsResult"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scores_menu_button" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_ranks_teams_result"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/category_ranks_teams_result_button"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/category_teams_result_button"
        android:layout_alignParentLeft="true"
        android:onClick="showCategoryRank"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_details"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/delete_details_menu_button"
        android:background="@color/dim_foreground_disabled_material_dark"
        android:layout_alignParentLeft="true"
        android:onClick="showDeleteDetails"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/category_ranks_teams_result_button" />


</RelativeLayout>
