<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.hackathon.csusm.hackathon.Activities.DeleteDetailsActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="166dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:padding="@dimen/abc_control_inset_material"
            android:text="@string/delete_challenges"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:onClick="delete_challenges"
            android:id="@+id/delete_challenges_button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:padding="@dimen/abc_control_inset_material"
            android:text="@string/delete_teams"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:onClick="delete_teams"
            android:id="@+id/delete_teams_button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:padding="@dimen/abc_control_inset_material"
            android:text="@string/delete_score_categories"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:onClick="delete_score_categories"
            android:id="@+id/delete_score_categories_button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:padding="@dimen/abc_control_inset_material"
            android:text="@string/delete_judges"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:onClick="delete_judges"
            android:id="@+id/delete_judges_button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:padding="@dimen/abc_control_inset_material"
            android:text="@string/delete_judge_scores"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:onClick="delete_judge_scores"
            android:id="@+id/delete_judge_scores_button"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/abc_action_bar_default_padding_material"
            android:padding="@dimen/abc_control_inset_material"
            android:text="@string/delete_all_details"
            android:background="@color/dim_foreground_disabled_material_dark"
            android:onClick="delete_all_details"
            android:id="@+id/delete_all_details_button"/>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_weight="1"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:onClick="showMenu"
        android:layout_alignParentBottom="true"
        android:background="@color/accent_material_light"
        android:id="@+id/button_delete_to_show_menu" />

</RelativeLayout>
