<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="39dp"
        android:text="@string/score_category"
        android:maxLines="3"
        android:id="@+id/textViewScoreCategoryListItem"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="24dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="39dp"
        android:text="@string/Maximum_score"
        android:id="@+id/textViewTopScoreListItem"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="24dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/edit_score_category"
        android:id="@+id/buttonScoreCategory" />

</LinearLayout>