<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.hackathon.csusm.hackathon.JudgesActivities.JudgesMenuActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu"
        android:id="@+id/textViewJudgeMenuTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/abc_action_bar_stacked_max_height" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/judge_view_teams"
        android:layout_margin="@dimen/abc_action_bar_default_padding_material"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/judge_show_teams"
        android:onClick="showTeams"
        android:background="@color/accent_material_light"
        android:layout_below="@+id/textViewJudgeMenuTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:padding="@dimen/abc_control_inset_material"
        android:id="@+id/judge_log_out_button"
        android:onClick="showLogIn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffff2a31" />
</RelativeLayout>
