<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.hackathon.csusm.hackathon.Activities.AddJudgeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judge_name"
        android:fontFamily="@string/abc_action_bar_home_description_format"
        android:textSize="24dp"
        android:id="@+id/textViewEditJudgeName"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEditJudgeName"
        android:text=""
        android:gravity="center"
        android:fontFamily="@string/abc_action_bar_home_description_format"
        android:textSize="24dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textViewEditJudgeName"
        android:layout_alignBottom="@+id/textViewEditJudgeName"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/buttonAddJudgeMain"
        android:onClick="deleteJudge"
        android:layout_alignTop="@+id/buttonEditJudgeMain"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="editJudge"
        android:id="@+id/buttonEditJudgeMain"
        android:layout_marginTop="92dp"
        android:layout_below="@+id/textViewEditJudgeUserId"
        android:layout_alignRight="@+id/textViewEditJudgeUserId"
        android:layout_alignEnd="@+id/textViewEditJudgeUserId" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judge_user_id"
        android:fontFamily="@string/abc_action_bar_home_description_format"
        android:textSize="24dp"
        android:id="@+id/textViewEditJudgeUserId"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewEditJudgeName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEditJudgeUserId"
        android:text=""
        android:gravity="center"
        android:fontFamily="@string/abc_action_bar_home_description_format"
        android:textSize="24dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textViewEditJudgeUserId"
        android:layout_alignBottom="@+id/textViewEditJudgeUserId"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
