<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.hackathon.csusm.hackathon.Activities.EditScoreActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="39dp"
        android:text="@string/score_category"
        android:maxLines="3"
        android:id="@+id/textViewEditScoreCategory"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEditScoreCategory"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textSize="24dp"
        android:layout_below="@+id/textViewEditScoreCategory" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:text="@string/Maximum_score"
        android:id="@+id/textViewEditTopScore"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="24dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/editTextEditScoreCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="90dp"
        android:layout_height="39dp"
        android:id="@+id/editTextEditTopScore"
        android:inputType="number"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/textViewEditTopScore"
        android:layout_below="@+id/editTextEditScoreCategory" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_score_category"
        android:id="@+id/buttonEditScoreCategory"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:onClick="editScoreCategory"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_score_category"
        android:id="@+id/buttonDeleteScoreCategory"
        android:textStyle="bold"
        android:textColorLink="@color/accent_material_dark"
        android:singleLine="true"
        android:onClick="deleteScoreCategory"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
